# rust-eth-playground

./: .gitignore  Cargo.toml  README.md
block-builder/: Cargo.toml
block-builder/src/: block_builder.rs  error.rs  lib.rs
core/execution/src/: cached.rs  error.rs  executor.rs  in_memory.rs  pipeline.rs  primitives.rs  providers.rs  snapshot_tests.rs  test_harness.rs  test_helpers.rs  validator.rs
core/networking/: Cargo.toml
core/networking/src/: chain.rs  client.rs  codec.rs  connection.rs  constants.rs  error.rs  lib.rs  main.rs  manager.rs  message.rs  server.rs
core/networking/tests/: handshake.rs
core/rlp-codec/examples/: dhat_trie.rs
core/rlp-codec/src/: error.rs  item.rs  lib.rs  property_tests.rs  roundtrip.rs  signing.rs  traits.rs  trie.rs
core/types/src/: account.rs  block.rs  chain_head.rs  constant.rs  error.rs  genesis.rs  header.rs  lib.rs  opcode.rs  transaction.rs
execution/: Cargo.toml
execution/src/: cached.rs  error.rs  executor.rs  in_memory.rs  lib.rs  pipeline.rs  primitives.rs  providers.rs  test_harness.rs  validator.rs
networking/src/: codec.rs
node/: Cargo.toml
node/src/: main.rs
processor/src/: block_processor.rs  errors.rs
rlp-codec/: Cargo.toml
rlp-codec/benches/: rlp_bench.rs  signing_bench.rs
rlp-codec/src/: decoder.rs  encoder.rs  error.rs  lib.rs  roundtrip.rs  signing.rs  traits.rs  trie.rs
types/: Cargo.toml
types/src/: address.rs  b256.rs  bloom.rs  execution_error.rs  lib.rs  macros.rs  test_helpers.rs  transaction.rs  transaction_error.rs
