[package]
name = "block-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "../core/types", features = [] }
rlp-codec = { path = "../core/rlp-codec", features = [] }
execution = { path = "../core/execution", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"