[package]
name = "rlp-codec"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
thiserror = "2.0.18"
k256 = { version = "0.13.4", features = ["ecdsa"] }
sha3 = "0.11.0"
types = { path = "../types", features = [] }
serde = { version = "1.0.228", features = ["derive"] }

[features]
optimism=["types/optimism"]

[dev-dependencies]
alloy-rlp = { version = "0.3.15", features = ["derive"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
dhat = "0.3.3"
insta = { version = "1.47.2", features = ["json"] }
proptest = "1.11.0"
serde_json = "1.0.149"

[[bench]]
name = "rlp_bench"
harness = false

[[bench]]
name = "signing_bench"
harness = false
