[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.5.7"
alloy-rlp = { version = "0.3.15", features = ["derive"] }
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.11.0"
thiserror = "2.0.18"

[features]
test-utils = []
optimism = []

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
insta = { version = "1.47.2", features = ["json"] }
serde_json = "1.0.149"
